apps/fair-knative/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: fair-knative
  labels:
    kubernetes.io/metadata.name: fair-knative
